feat: add paginated policy enterprise list
